--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -1,14 +1,16 @@
-
-@import "pygments.css";
-
-.highlight {}
-
-$link-color: #36B5BE;
-
-.site-footer {
-  display: none;
+@import 'pygments.css';
+body {
+	font-family: GalanoGrotesque-Regular;
 }
 
+.highlight {
+}
+
+$link-color: #36b5be;
+
+.site-footer {
+	display: none;
+}
 
 // notes
 
@@ -17,48 +19,46 @@ $note-info-color: #cce5ff;
 $note-danger-color: #ea8685;
 
 .note {
-  padding: 10px;
-  background-color: $note-color;
-  border: 1px solid darken($note-color, 30%);
-  border-radius: 3px;
-  strong {
-    color: darken($note-color, 50%);
-  }
+	padding: 10px;
+	background-color: $note-color;
+	border: 1px solid darken($note-color, 30%);
+	border-radius: 3px;
+	strong {
+		color: darken($note-color, 50%);
+	}
 }
 
-
 .note.note-info {
-  background-color: $note-info-color;
-  border: 1px solid darken($note-info-color, 30%);
-  strong {
-    color: darken($note-info-color, 40%);
-  }
+	background-color: $note-info-color;
+	border: 1px solid darken($note-info-color, 30%);
+	strong {
+		color: darken($note-info-color, 40%);
+	}
 }
 
 .note.note-danger {
-  background-color: $note-danger-color;
-  border: 1px solid darken($note-danger-color, 30%);
-  strong {
-    color: darken($note-danger-color, 40%);
-  }
+	background-color: $note-danger-color;
+	border: 1px solid darken($note-danger-color, 30%);
+	strong {
+		color: darken($note-danger-color, 40%);
+	}
 }
 
-
 .highlighter-rouge code {
-  padding: 0;
-  background: none;
-  border: none;
-  border-radius: 0;
+	padding: 0;
+	background: none;
+	border: none;
+	border-radius: 0;
 }
 
 .cta {
-  margin-top: 30px;
-  .btn {
-    font-size: 1.25em;
-    margin-right: 10px;
-  }
+	margin-top: 30px;
+	.btn {
+		font-size: 1.25em;
+		margin-right: 10px;
+	}
 }
 
 .ref-list li {
-  margin-bottom: 25px;
+	margin-bottom: 25px;
 }
