--- a/docs/_sass/color_schemes/lakefs.scss
+++ b/docs/_sass/color_schemes/lakefs.scss
@@ -166,3 +166,7 @@ $media-queries: (
 	lg: $content-width + $nav-width,
 	xl: 1400px,
 ) !default;
+
+body {
+	font-family: GalanoGrotesque-Regular;
+}
