--- a/_sass/color_schemes/lakefs.scss
+++ b/_sass/color_schemes/lakefs.scss
@@ -5,7 +5,7 @@
 @font-face {
 	font-family: GalanoGrotesque-ExtraLight;
 	src: local(GalanoGrotesque-ExtraLight),
-		url('../../assets/fonts/Rene Bieder - Galano Grotesque ExtraLight.otf')
+		url('../docs/assets/fonts/Rene Bieder - Galano Grotesque ExtraLight.otf')
 			format('otf');
 	font-style: normal;
 	font-stretch: normal;
@@ -13,7 +13,7 @@
 @font-face {
 	font-family: GalanoGrotesque-Regular;
 	src: local(GalanoGrotesque-Regular),
-		url('../../assets/fonts/Rene Bieder - Galano Grotesque.otf')
+		url('../docs/assets/fonts/Rene Bieder - Galano Grotesque.otf')
 			format('otf');
 	font-style: normal;
 	font-stretch: normal;
@@ -21,7 +21,7 @@
 @font-face {
 	font-family: GalanoGrotesque-Medium;
 	src: local(GalanoGrotesque-Medium),
-		url('../../assets/fonts/Rene Bieder - Galano Grotesque Medium.otf')
+		url('../docs/assets/fonts/Rene Bieder - Galano Grotesque Medium.otf')
 			format('otf');
 	font-style: normal;
 	font-stretch: normal;
@@ -29,7 +29,7 @@
 @font-face {
 	font-family: GalanoGrotesque-Bold;
 	src: local(GalanoGrotesque-Bold),
-		url('../../assets/fonts/Rene Bieder - Galano Grotesque Bold.otf')
+		url('../docs/assets/fonts/Rene Bieder - Galano Grotesque Bold.otf')
 			format('otf');
 	font-style: normal;
 	font-stretch: normal;
