--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -7,7 +7,7 @@
 @font-face {
 	font-family: GalanoGrotesque-ExtraLight;
 	src: local(GalanoGrotesque-ExtraLight),
-		url('../../assets/fonts/Rene Bieder - Galano Grotesque ExtraLight.otf')
+		url('../../docs/assets/fonts/Rene Bieder - Galano Grotesque ExtraLight.otf')
 			format('otf');
 	font-style: normal;
 	font-stretch: normal;
@@ -15,7 +15,7 @@
 @font-face {
 	font-family: GalanoGrotesque-Regular;
 	src: local(GalanoGrotesque-Regular),
-		url('../../assets/fonts/Rene Bieder - Galano Grotesque.otf')
+		url('../../docs/assets/fonts/Rene Bieder - Galano Grotesque.otf')
 			format('otf');
 	font-style: normal;
 	font-stretch: normal;
@@ -23,7 +23,7 @@
 @font-face {
 	font-family: GalanoGrotesque-Medium;
 	src: local(GalanoGrotesque-Medium),
-		url('../../assets/fonts/Rene Bieder - Galano Grotesque Medium.otf')
+		url('../../docs/assets/fonts/Rene Bieder - Galano Grotesque Medium.otf')
 			format('otf');
 	font-style: normal;
 	font-stretch: normal;
@@ -31,7 +31,7 @@
 @font-face {
 	font-family: GalanoGrotesque-Bold;
 	src: local(GalanoGrotesque-Bold),
-		url('../../assets/fonts/Rene Bieder - Galano Grotesque Bold.otf')
+		url('../../docs/assets/fonts/Rene Bieder - Galano Grotesque Bold.otf')
 			format('otf');
 	font-style: normal;
 	font-stretch: normal;
