--- a/_sass/color_schemes/lakefs.scss
+++ b/_sass/color_schemes/lakefs.scss
@@ -25,6 +25,10 @@
 		url('../../docs/assets/fonts/Rene Bieder - Galano Grotesque Bold.otf');
 }
 
+body {
+	font-family: GalanoGrotesque;
+}
+
 $link-color: #36b5be;
 
 .site-footer {
