--- a/_sass/color_schemes/lakefs.scss
+++ b/_sass/color_schemes/lakefs.scss
@@ -10,7 +10,7 @@
 		url('../../docs/assets/fonts/Rene Bieder - Galano Grotesque ExtraLight.otf');
 }
 @font-face {
-	font-family: GalanoGrotesque-Regular;
+	font-family: GalanoGrotesque;
 	src: local(GalanoGrotesque-Regular),
 		url('../../docs/assets/fonts/Rene Bieder - Galano Grotesque.otf');
 }
