--- a/docs/_sass/color_schemes/lakefs.scss
+++ b/docs/_sass/color_schemes/lakefs.scss
@@ -7,22 +7,22 @@
 @font-face {
 	font-family: GalanoGrotesque-ExtraLight;
 	src: local(GalanoGrotesque-ExtraLight),
-		url('../../docs/assets/fonts/Rene Bieder - Galano Grotesque ExtraLight.otf');
+		url('../assets/fonts/Rene Bieder - Galano Grotesque ExtraLight.otf');
 }
 @font-face {
 	font-family: GalanoGrotesque;
 	src: local(GalanoGrotesque-Regular),
-		url('../../docs/assets/fonts/Rene Bieder - Galano Grotesque.otf');
+		url('../assets/fonts/Rene Bieder - Galano Grotesque.otf');
 }
 @font-face {
 	font-family: GalanoGrotesque-Medium;
 	src: local(GalanoGrotesque-Medium),
-		url('../../docs/assets/fonts/Rene Bieder - Galano Grotesque Medium.otf');
+		url('../assets/fonts/Rene Bieder - Galano Grotesque Medium.otf');
 }
 @font-face {
 	font-family: GalanoGrotesque-Bold;
 	src: local(GalanoGrotesque-Bold),
-		url('../../docs/assets/fonts/Rene Bieder - Galano Grotesque Bold.otf');
+		url('../assets/fonts/Rene Bieder - Galano Grotesque Bold.otf');
 }
 
 body {
