--- a/docs/_sass/color_schemes/lakefs.scss
+++ b/docs/_sass/color_schemes/lakefs.scss
@@ -10,6 +10,9 @@ $link-color: #36b5be;
 	display: none;
 }
 
+$body-font-family: GalanoGrotesque, -apple-system, BlinkMacSystemFont,
+	'helvetica neue', helvetica, roboto, noto, 'segoe ui', arial, sans-serif !default;
+$mono-font-family: GalanoGrotesque, 'SFMono-Regular', Menlo, Consolas, Monospace !default;
 // notes
 
 $note-color: #ffdf7e;
