--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -1,22 +1,22 @@
 @font-face {
 	font-family: GalanoGrotesque-ExtraLight;
 	src: local(GalanoGrotesque-ExtraLight),
-		url('../assets/fonts/Rene Bieder - Galano Grotesque ExtraLight.otf');
+		url('../fonts/Rene Bieder - Galano Grotesque ExtraLight.otf');
 }
 @font-face {
 	font-family: GalanoGrotesque;
 	src: local(GalanoGrotesque-Regular),
-		url('../assets/fonts/Rene Bieder - Galano Grotesque.otf');
+		url('../fonts/Rene Bieder - Galano Grotesque.otf');
 }
 @font-face {
 	font-family: GalanoGrotesque-Medium;
 	src: local(GalanoGrotesque-Medium),
-		url('../assets/fonts/Rene Bieder - Galano Grotesque Medium.otf');
+		url('../fonts/Rene Bieder - Galano Grotesque Medium.otf');
 }
 @font-face {
 	font-family: GalanoGrotesque-Bold;
 	src: local(GalanoGrotesque-Bold),
-		url('../assets/fonts/Rene Bieder - Galano Grotesque Bold.otf');
+		url('../fonts/Rene Bieder - Galano Grotesque Bold.otf');
 }
 
 body {
