--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -18,3 +18,6 @@
 	src: local(GalanoGrotesque-Bold),
 		url('../fonts/Rene Bieder - Galano Grotesque Bold.otf');
 }
+body {
+	font-family: GalanoGrotesque;
+}
