--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -119,7 +119,7 @@ a {
 }
 .side-bar:after {
 	content: ' ';
-	position: absolute;
+	position: fixed;
 	width: 100vw;
 	top: 80px;
 	box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.23);
@@ -166,7 +166,7 @@ a {
 		max-width: 250px !important;
 		max-height: 40px !important;
 		width: 250px !important;
-		z-index: 50;
+		z-index: 1;
 
 		.search-input {
 			background-color: $white-two;
@@ -194,26 +194,50 @@ a {
 		width: 100%;
 		.nav-list {
 			width: 100%;
+			padding: 0;
 			.nav-list-item {
-				padding-right: 40px;
-				padding-left: calc(100% - 290px);
-				&.active,
+				padding: 0;
 				&:hover {
 					background-color: #ededed;
 				}
+				&.active {
+					&:hover {
+						background-color: transparent;
+					}
+					.nav_list {
+						li {
+							padding-right: 0;
+							padding-left: 0;
+							&:hover {
+								background-color: #ededed;
+							}
+						}
+					}
+				}
+
 				&.header {
+					padding: 12px 40px 12px calc(100% - 290px);
 					color: $teal-green;
 					font-family: GalanoGrotesque-Bold;
 					font-size: 18px !important;
+					&:hover {
+						background-color: transparent;
+						background-image: none;
+					}
+					&:not(:first-of-type) {
+						padding-top: 36px;
+						border-top: 1px solid $border-grey;
+						margin-top: 20px;
+					}
 				}
 
 				a.nav-list-link {
-					padding: 8px 0;
+					padding: 12px 40px 12px calc(100% - 290px);
 					font-size: 16px !important;
 					color: $black;
 					&.active,
 					&:hover {
-						background-color: none;
+						background-color: #ededed;
 						background-image: none;
 						font-family: GalanoGrotesque-Medium;
 					}
@@ -223,7 +247,7 @@ a {
 					width: 22px;
 					height: 22px;
 					padding: 0;
-					margin: 8px 0;
+					margin: 14px 0 0 0;
 					svg {
 						color: $black;
 					}
