--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -26,7 +26,7 @@
                 <li class="aux-nav-list-item">
                     <a href="{{ link.last }}" class="site-button" {% if site.aux_links_new_tab %} target="_blank"
                         rel="noopener noreferrer" {% endif %}>
-                        <img src="/assets/icons/{{ link.first }}.svg" />
+                        <img src="{{ '/' | absolute_url }}assets/icons/{{ link.first }}.svg" />
                     </a>
                 </li>
                 {% endfor %}
