--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -31,11 +31,17 @@ $viridian: #258c82;
 $aqua-marine: #2ce5b5;
 $border-grey: #dadada;
 $white-two: #f8f8f8;
+$charcoal: #2f3433;
+$note: #fff3e5;
+$note-border: #f3a342;
 
 // General
-
+html {
+	scroll-padding-top: 90px;
+}
 body {
 	font-family: GalanoGrotesque;
+	color: $black;
 	.body-wrapper,
 	footer {
 		display: flex;
@@ -48,7 +54,7 @@ body {
 			position: relative;
 			.main-content-wrap {
 				max-width: 800px;
-				padding-top: 80px;
+				padding: 80px;
 			}
 		}
 
@@ -61,10 +67,143 @@ body {
 			background-color: $white-two;
 		}
 	}
-}
 
-a {
-	color: $teal-green;
+	a {
+		color: $teal-green;
+	}
+
+	h1 {
+		margin-top: 40px !important;
+		font-family: GalanoGrotesque-Medium;
+		font-size: 42px;
+		color: $black;
+	}
+	h2 {
+		margin-top: 40px !important;
+		font-size: 28px;
+		&#table-of-contents {
+			font-family: GalanoGrotesque-Medium;
+			color: $black;
+			font-size: 16px !important;
+		}
+	}
+
+	h3 {
+		margin-top: 25px !important;
+		font-size: 20px;
+		font-family: GalanoGrotesque-Medium;
+	}
+	h4,
+	.text-delta {
+		text-transform: none;
+	}
+	#markdown-toc {
+		border-left: solid 2px $border-grey;
+		li {
+			&::before {
+				display: none;
+			}
+			a {
+				color: $warm-grey-two;
+				font-size: 16px;
+				padding: 8px 0;
+				background-image: none;
+				&:hover {
+					background-image: none;
+					color: black;
+				}
+			}
+			ol,
+			ul {
+				border: none;
+				li {
+					a {
+						padding-bottom: 0;
+					}
+				}
+			}
+		}
+	}
+	.language-markdown,
+	code,
+	pre.highlight,
+	figure.highlight {
+		background: white;
+		color: $battleship-grey;
+	}
+	figure.highlight,
+	pre.highlight {
+		border-radius: 2px;
+		border: solid 1px $border-grey;
+
+		color: $teal-green;
+		.gu,
+		.gh,
+		.nt,
+		.kd,
+		.k,
+		.kc,
+		.nb {
+			color: $teal-green;
+		}
+		.nv,
+		.p,
+		.o {
+			color: $battleship-grey;
+		}
+	}
+	.btn {
+		padding: 6px 14px;
+		color: $charcoal;
+		font-family: GalanoGrotesque-Medium;
+		border-radius: 4px;
+		background: $white;
+		border: solid 2px $charcoal;
+		box-shadow: none;
+		&:hover {
+			border-color: $teal-green;
+			color: $teal-green;
+			background: $white;
+		}
+	}
+	.note {
+		background-color: $note;
+		border-left: 4px solid $note-border;
+		border-radius: 2px;
+		padding: 8px 20px;
+	}
+	code.language-plaintext.highlighter-rouge {
+		background: #f3f3f3;
+		color: $charcoal;
+		font-size: 12px;
+	}
+
+	.main-content {
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6 {
+			&:hover {
+				a.anchor-heading {
+					left: -1.7rem;
+					svg {
+						display: none;
+					}
+					background-image: url('../../assets/icons/anchor.svg');
+					width: 24px;
+					height: 24px;
+					background-repeat: no-repeat;
+					background-size: contain;
+					background-position: center center;
+					&:hover {
+						background-image: url('../../assets/icons/anchor\ green.svg');
+					}
+				}
+			}
+		}
+	}
 }
 
 // Header
@@ -146,11 +285,6 @@ a {
 			height: inherit;
 		}
 	}
-}
-.main .main-content,
-.side-bar .search {
-	z-index: -1;
-	position: relative;
 }
 
 .site-logo {
