--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -382,6 +382,7 @@ body {
 
 				.nav-list,
 				.aux-nav-list {
+					margin-top: 0;
 					a.nav-list-link,
 					a.aux-nav-list-item {
 						text-indent: 20px;
