--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="footer-sidebar"></div>
     <div class="footer-main">
         <div class="row">
-            <a href="{{ '/' | absolute_url }}" class="site-title lh-tight">
+            <a href="{{ site.logo_link }}" class="site-title lh-tight">
                 <div class="site-logo"></div>
             </a>
         </div>
