--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -385,7 +385,7 @@ body {
 					margin-top: 0;
 					a.nav-list-link,
 					a.aux-nav-list-item {
-						text-indent: 20px;
+						margin-left: 20px;
 						font-size: 14px !important;
 					}
 				}
