--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -387,6 +387,7 @@ body {
 					a.aux-nav-list-item {
 						margin-left: 20px;
 						font-size: 14px !important;
+						letter-spacing: 0.05px;
 					}
 				}
 			}
